# demo_test2

./: .gitignore  README.md  UPLOAD_GUIDE.md  pyproject.toml  start.ps1
backend/: database.py  main.py  models.py  requirements.txt  run.py  schemas.py
backend/app/: config.py  database.py  main.py
backend/app/crud/: __init__.py  employee.py
backend/app/models/: __init__.py  employee.py
backend/app/schemas/: __init__.py  employee.py
backend/app/services/: __init__.py  employee_service.py
docs/: design.md  requirements.md  task-1-summary.md  task-2-summary.md  tasks.md
frontend/: app.js  index.html  style.css
tests/: test_api.py  test_models.py
